# fastapi-mongo-admin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example_usage.py  pyproject.toml  setup.py  test_openapi_inference.py
fastapi_mongo_admin/: __init__.py  auth.py  cache.py  database.py  exceptions.py  middleware.py  models.py  pagination.py  router.py  schema.py  services.py  utils.py
fastapi_mongo_admin/static/: admin.html  darkmode.js  lightmode.css
fastapi_mongo_admin/static/css/: darkmode.css  lightmode.css
fastapi_mongo_admin/static/js/: api.js  darkmode.js  export-progress.js  keyboard.js  query-builder.js  table.js  toast.js  utils.js
fastapi_mongo_admin/static/js/react/: App.js  jsx-helpers.js  utils.js
fastapi_mongo_admin/static/js/react/components/: AnalyticsView.js  BrowseView.js  BulkUpdateModal.js  ConfirmModal.js  CreateModal.js  CustomActionsModal.js  CustomView.js  DateHierarchy.js  EditModal.js  ExportModal.js  FieldSelectionModal.js  FilterPanel.js  ImportModal.js  LanguageSelector.js  Message.js  SchemaView.js  Sidebar.js  ViewModal.js
fastapi_mongo_admin/static/js/react/hooks/: useDarkMode.js  useTranslation.js
fastapi_mongo_admin/static/js/react/i18n/: i18n.js
fastapi_mongo_admin/static/js/react/i18n/translations/: ch.js  de.js  en.js  es.js  fr.js  it.js  pt.js  ru.js
fastapi_mongo_admin/static/js/react/services/: api.js
fastapi_mongo_admin/static/js/react/utils/: validators.js
tests/: __init__.py  conftest.py  test_cache.py  test_database.py  test_exceptions.py  test_middleware.py  test_middleware_comprehensive.py  test_models.py  test_pagination.py  test_pagination_coverage.py  test_schema.py  test_schema_comprehensive.py  test_schema_coverage.py  test_services.py  test_utils.py  test_utils_comprehensive.py  test_utils_comprehensive_coverage.py
