[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-mongo-admin"
version = "0.1.2"
description = "A FastAPI package for MongoDB admin operations with generic CRUD endpoints and admin UI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Taiwo Kareem", email = "taiwo.kareem36@gmail.com"},
]
keywords = ["fastapi", "mongodb", "admin", "crud", "motor", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.68.0",
    "motor>=2.5.0",
    "pymongo>=4.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]
export = [
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tushortz/fastapi-mongo-admin"
Documentation = "https://github.com/tushortz/fastapi-mongo-admin#readme"
Repository = "https://github.com/tushortz/fastapi-mongo-admin"
Issues = "https://github.com/tushortz/fastapi-mongo-admin/issues"

[tool.setuptools]
packages = ["fastapi_mongo_admin"]

[tool.setuptools.package-data]
fastapi_mongo_admin = ["static/**/*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.coverage.run]
omit = [
    "fastapi_mongo_admin/router.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

